CSPACE-4391: Converting Geo Ref Date into a structured date, plus getting rid of unnecessary comments.

--- a/src/main/webapp/defaults/bundle/core-messages.properties
+++ b/src/main/webapp/defaults/bundle/core-messages.properties
@@ -218,7 +218,7 @@ place-footprintWKTLabel: Footprint WKT
 place-footprintSRSLabel: Footprint SRS
 place-footprintSpatialFitLabel: Footprint sp. fit
 place-geoReferencedByLabel: Georeference by
-place-geoRefDateLabel: Date
+placeGeoRefGroup-geoRefDateGroupLabel: Date
 place-geoRefProtocolLabel: Protocol
 place-geoRefSourceLabel: Source
 place-geoRefVerificationStatusLabel: Verification
@@ -228,7 +228,6 @@ place-updatedAtLabel: Modified Date
 place-updatedAtStartLabel: Earliest
 place-updatedAtEndLabel: Latest
 place-editUsername: Record Modified By
-# Need this next label?
 place-displayNameRequired: Please specify a Display Name
 
 contact-telephoneNumberGroupLabel: Telephone Number
